# Zovark_swami

./: .cgrignore  .cursorrules  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  AUDIT_FINDINGS.md  CHANGELOG.md  CLAUDE.md  Caddyfile  ENGINEERING_DISCIPLINE.md  FRAMEWORK_VALIDATION_REPORT.md  HANDOVER.md  HOUSEKEEPING_REPORT.md  HYDRA_Research_Prompt.md  MEGA_PROMPT_REPORT.md  Makefile  RELEASE_NOTES.md  VALIDATION_REPORT.md  WORKER_CODE_SUMMARY.md  ZOVARK.md  ZOVARK_NOTEBOOK.md  ZOVARK_Research_Prompt.md  ZOVARK_SETUP_RTX3050.md  batch_results_100.json  batch_results_v2_100.json  batch_results_v2_llm_10.json  benchmark_base.txt  benchmark_dpo.txt  benchmark_results.json  block1-complete-all-sessions.md  brute_force_template.py  debug_exfil.py  debug_lm.py  debug_mshta.py  demo_tasks.py  docker-compose.airgap.yml  docker-compose.autoscaler.yml  docker-compose.code-graph-rag.yml  (+30 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
LICENSES/: README.md
agent/: Dockerfile  healer.py
api/: Dockerfile  admin_bootstrap_handlers.go  admin_breakglass.go  admin_config_handlers.go  admin_diag_ratelimit.go  admin_diagnostics_handlers.go  admin_handlers.go  alert_dedup.go  analytics.go  apikeys.go  approval_handlers.go  approvals.go  audit_export.go  auth.go  auth_test.go  backpressure.go  batch_buffer.go  cipher_audit_handlers.go  compliance_handlers.go  db.go  (+62 more)
sdk/python/: README.md  pyproject.toml
sdk/python/hydra/: __init__.py  client.py  exceptions.py  models.py
sdk/python/zovark/: __init__.py  client.py  exceptions.py  models.py
(+951 files in other folders)
